test/test_suite/errors/else_check_void.c3t
module test;

faultdef MALFORMED_RESPONSE;
macro void? set_field(String[] tokens)
{
	if (tokens.len < 2) return MALFORMED_RESPONSE~;
}

fn void main()
{
	String[] tokens = { "a", "b" };
	set_field(tokens) ?? (void)1;
}

/* #expect: test.ll

fefe
